--- a/TMHContacts/Base.lproj/Main.storyboard
+++ b/TMHContacts/Base.lproj/Main.storyboard
@@ -442,7 +442,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="efD-ZJ-nU4">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="username" translatesAutoresizingMaskIntoConstraints="NO" id="efD-ZJ-nU4">
                                 <rect key="frame" x="142" y="127" width="130" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="130" id="Rjq-O9-3Lz"/>
@@ -817,7 +817,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="avatar" width="512" height="512"/>
         <image name="email" width="20" height="14"/>
         <image name="gear-2" width="35" height="35"/>
         <image name="group" width="35" height="35"/>
@@ -828,7 +827,6 @@
         <image name="username" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="QbT-PI-BBv"/>
         <segue reference="72a-NX-8qr"/>
         <segue reference="Ic4-K6-s1P"/>
         <segue reference="Hnf-rG-QpD"/>
