Deletar contato funcionando

--- a/TMHContacts/Base.lproj/Main.storyboard
+++ b/TMHContacts/Base.lproj/Main.storyboard
@@ -379,7 +379,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="Xyq-53-Tfm" kind="show" identifier="segueMapView" id="Ic4-K6-s1P"/>
+                        <segue destination="Xyq-53-Tfm" kind="show" identifier="segueMapView" id="RRk-uS-eV9"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cNs-F4-iDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -394,7 +394,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="tkjnvK9ENIMAlNWtUyMJkPbNCvy1" placeholder="enter the contact id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1H-xf-eRQ">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="4czZv9fzCbO1mIVuVVlReUFT3vU2" placeholder="enter the contact id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1H-xf-eRQ">
                                 <rect key="frame" x="53" y="150" width="341" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
@@ -828,7 +828,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="72a-NX-8qr"/>
-        <segue reference="Ic4-K6-s1P"/>
+        <segue reference="RRk-uS-eV9"/>
         <segue reference="Hnf-rG-QpD"/>
     </inferredMetricsTieBreakers>
 </document>
